--- a/DialogSampleApp/Resources/layout/dialog_boolfieldleft.xml
+++ b/DialogSampleApp/Resources/layout/dialog_boolfieldleft.xml
@@ -5,6 +5,7 @@
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:minHeight="?android:attr/listPreferredItemHeight"
+android:background="@android:color/transparent"
   >
   <CheckBox
     android:id="@+id/dialog_BoolField"
