--- a/DialogSampleApp/Resources/layout/dialog_button.xml
+++ b/DialogSampleApp/Resources/layout/dialog_button.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="65dp"
-  android:padding="12dp"
+  android:layout_height="wrap_content"
+  android:padding="5dp"
   >
   <Button
     android:id="@+id/dialog_Button"
