--- a/DialogSampleApp/Resources/layout/dialog_boolfieldleft.xml
+++ b/DialogSampleApp/Resources/layout/dialog_boolfieldleft.xml
@@ -5,13 +5,13 @@
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:minHeight="?android:attr/listPreferredItemHeight"
-android:background="@android:color/transparent"
   >
   <CheckBox
     android:id="@+id/dialog_BoolField"
     android:layout_width="50dp"
     android:layout_height="fill_parent"
     android:layout_weight="0"
+		android:focusable="false"
   />
   <TextView android:id="@+id/dialog_LabelField"
     android:layout_width="wrap_content"
