--- a/DialogSampleApp/Resources/layout/dialog_floatimage.xml
+++ b/DialogSampleApp/Resources/layout/dialog_floatimage.xml
@@ -32,7 +32,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="left|center_vertical"
-		android:src="@drawable/dialog_disclosure"
+		android:src="@drawable/icon"
 		android:layout_marginLeft="3dp"
 		android:layout_marginRight="3dp"
 		/>
@@ -48,7 +48,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="right|center_vertical"
-		android:src="@drawable/dialog_disclosure"
+		android:src="@drawable/spinner_default_holo_dark"
 		android:layout_marginLeft="3dp"
 		android:layout_marginRight="3dp"
 		/>
