--- a/BestSellers/BestSellers.Webkit/WebApp/Design/BlackBerryRender.css
+++ b/BestSellers/BestSellers.Webkit/WebApp/Design/BlackBerryRender.css
@@ -9,7 +9,7 @@
 	border-top:solid 2px #cdd5df;	
 	border-bottom:none;
 	text-shadow:#424e5d 0 -1px 0;
-	color:fff;
+	color:#fff;
 	width:auto;
 }
 
@@ -242,7 +242,7 @@ text-decoration:none;
 	text-align:center;
 	width:100%;
 	background:#000 url(Img/bg-head.png) repeat-x;
-	margin-top: -5;	
+	margin-top: -5px;	
 	font-weight:bold;	
 	color:#fff;	
 }
@@ -360,7 +360,7 @@ a[rel=back] { display:none }
 	line-height:26px;
 	font-size:13px;
 	text-shadow:rgba(0,0,0,0.5) 0 -1px 0;
-	color:fff;
+	color:#fff;
 	font-weight:bold;
 }
 .iTab li {
@@ -900,7 +900,7 @@ li.iRadio a label { display:none }
 	border-bottom:solid 1px #2d3642;
 	font-weight:bold;
 	text-shadow:#424e5d 0 -1px 0;
-	color:fff;
+	color:#fff;
 	-webkit-box-sizing:border-box;
 }
 
